@@ -8,9 +8,13 @@
 
 #include <signal.h>
 
+/* prototype(s) */
+void clean_exit(int signum);
+
 volatile int terminate = 0;	/* signal will set this for a clean exit */
 
 void clean_exit(int signum) {
+    fprintf( stderr, "received signal %d: terminating...\n", signum );
     terminate = 1;
     return;
 }
